# Meta_PyTorch_Scalar_OpenEnv-Hackathon

./: .dockerignore  .gitignore  .gitignore copy  Dockerfile  PROMPT.md  README.MD  README.md  inference.py  openenv.yaml  pyproject.toml  train_bandit.py  train_rl.py  training_metrics.json
backend/: requirements.txt
data/processed/: patients_polypharmacy.csv
frontend/: Dockerfile  package-lock.json  package.json
openenv-polypharmacy/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt
openenv-polypharmacy/backend/: Dockerfile  __init__.py  main.py  requirements.txt
openenv-polypharmacy/backend/src/polypharmacy_env/: config.py  ddi_simulator.py
openenv-polypharmacy/backend/src/polypharmacy_env/api/routes/: agent.py
openenv-polypharmacy/backend/src/polypharmacy_env/baselines/: heuristic_agent.py
openenv-polypharmacy/data/lookups/: beers_criteria.csv  ddi_rules.csv  drug_metadata.csv
openenv-polypharmacy/data/processed/: patients_polypharmacy.csv
openenv-polypharmacy/frontend/: index.html
openenv-polypharmacy/frontend/src/: App.jsx  styles.css
openenv-polypharmacy/scripts/: inference.py  run_validation.sh
openenv-polypharmacy/src/polypharmacy_env/: __init__.py  client.py  config.py  data_loader.py  env_core.py  graders.py  models.py
openenv-polypharmacy/src/polypharmacy_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openenv-polypharmacy/src/polypharmacy_env/api/: schemas.py  server.py
openenv-polypharmacy/src/polypharmacy_env/baselines/: heuristic_agent.py  random_agent.py
openenv-polypharmacy/src/polypharmacy_env/tests/: test_api.py  test_env_core.py
scripts/: dev_backend.sh  preprocess_data.py  run_validation.sh
server/: app.py
(+20 files in other folders)
