[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polypharmacy-env"
version = "0.1.0"
description = "OpenEnv environment for elderly polypharmacy medication-review safety"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "black",
    "isort",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/src/polypharmacy_env/tests"]
pythonpath = ["backend/src"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 99
